# mcp-dosya

./: .gitignore  LICENSE  README.md  mcp_sse_server.py  pyproject.toml  requirements.txt
src/file_manager_server/: __init__.py  config.py  rest_api.py  server.py
src/file_manager_server/handlers/: __init__.py  advanced_operations.py  directory_operations.py  file_operations.py  image_operations.py  search_operations.py  special_operations.py
src/file_manager_server/utils/: __init__.py  file_helpers.py  security.py  validators.py
tests/: __init__.py  test_directory_operations.py  test_file_operations.py  test_security.py
